Update server using openapi-generator
