# server/openapi_server/models/text_physical_address_annotation.py
@@ -81,6 +81,8 @@ class TextPhysicalAddressAnnotation(Model):
         :param start: The start of this TextPhysicalAddressAnnotation.
         :type start: int
         """
+        if start is None:
+            raise ValueError("Invalid value for `start`, must not be `None`")  # noqa: E501
 
         self._start = start
 
@@ -104,6 +106,8 @@ class TextPhysicalAddressAnnotation(Model):
         :param length: The length of this TextPhysicalAddressAnnotation.
         :type length: int
         """
+        if length is None:
+            raise ValueError("Invalid value for `length`, must not be `None`")  # noqa: E501
 
         self._length = length
 
